--- a/index.html
+++ b/index.html
@@ -1,81 +1,238 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>NEXUX NET</title>
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css'><link rel="stylesheet" href="./style.css">
-
+	<meta charset="UTF-8">
+	<title>NEXUX NET</title>
+	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css'>
+	<link rel="stylesheet" href="./style.css">
+	<script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<main>
-  <div>
-    <span>discover</span>
-    <h1>NEXUS NET</h1>
-    <hr>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta distinctio voluptatum eos sunt provident in minus iusto fuga? Officia, at!.</p>
-    <a href="#">download app</a>
-  </div>
-  <div class="swiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide swiper-slide--one">
-        <div>
-          <h2>IMAGE 1</h2>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae dignissimos, praesentium cum id itaque nulla officia unde iusto animi ipsa similique! Veniam fuga iste labore iusto, pariatur magni mollitia? Sit.</p>
-          <a href="https://en.wikipedia.org/wiki/Jellyfish" target="_blank">BUTTON</a>
-        </div>
-      </div>
-      <div class="swiper-slide swiper-slide--two">
-        <div>
-          <h2>IMAGE 2</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis, beatae molestias nulla voluptate repudiandae ipsum modi aspernatur doloremque quam pariatur repellendus eius provident tempore. Odio voluptates voluptate impedit harum?
-          </p>
-          <a href="https://en.wikipedia.org/wiki/Seahorse" target="_blank">BUTTON</a>
-        </div>
-      </div>
+	<!-- partial:index.partial.html -->
+	<main>
+		<div>
+			<span>discover</span>
+			<h1>NEXUS NET</h1>
+			<hr>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta distinctio voluptatum eos sunt provident
+				in
+				minus iusto fuga? Officia, at!.</p>
+			<a href="#">download app</a>
+		</div>
+		<div class="swiper">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide swiper-slide--one">
+					<div>
+						<h2>IMAGE 1</h2>
+						<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae dignissimos, praesentium
+							cum id
+							itaque nulla officia unde iusto animi ipsa similique! Veniam fuga iste labore iusto,
+							pariatur magni
+							mollitia? Sit.</p>
+						<a href="https://en.wikipedia.org/wiki/Jellyfish" target="_blank">BUTTON</a>
+					</div>
+				</div>
+				<div class="swiper-slide swiper-slide--two">
+					<div>
+						<h2>IMAGE 2</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium omnis, beatae molestias
+							nulla
+							voluptate repudiandae ipsum modi aspernatur doloremque quam pariatur repellendus eius
+							provident tempore.
+							Odio voluptates voluptate impedit harum?
+						</p>
+						<a href="https://en.wikipedia.org/wiki/Seahorse" target="_blank">BUTTON</a>
+					</div>
+				</div>
 
-      <div class="swiper-slide swiper-slide--three">
+				<div class="swiper-slide swiper-slide--three">
 
-        <div>
-          <h2>IMAGE 3</h2>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit eum modi placeat necessitatibus vitae fugiat debitis itaque! Eum adipisci, enim explicabo corrupti, alias sed nisi facere nesciunt, similique ut illo.
-          </p>
-          <a href="https://en.wikipedia.org/wiki/Octopus" target="_blank">BUTTON</a>
-        </div>
-      </div>
+					<div>
+						<h2>IMAGE 3</h2>
+						<p>
+							Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit eum modi placeat
+							necessitatibus vitae
+							fugiat debitis itaque! Eum adipisci, enim explicabo corrupti, alias sed nisi facere
+							nesciunt, similique ut
+							illo.
+						</p>
+						<a href="https://en.wikipedia.org/wiki/Octopus" target="_blank">BUTTON</a>
+					</div>
+				</div>
 
-      <div class="swiper-slide swiper-slide--four">
+				<div class="swiper-slide swiper-slide--four">
 
-        <div>
-          <h2>IMAGE 4</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sunt autem, earum quia amet vitae laborum quos asperiores sapiente repellat, ipsa aliquam voluptates, reprehenderit nesciunt hic. Laudantium excepturi necessitatibus ea.
-          </p>
-          <a href="https://en.wikipedia.org/wiki/Shark" target="_blank">BUTTON</a>
-        </div>
-      </div>
+					<div>
+						<h2>IMAGE 4</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sunt autem, earum quia
+							amet vitae
+							laborum quos asperiores sapiente repellat, ipsa aliquam voluptates, reprehenderit nesciunt
+							hic. Laudantium
+							excepturi necessitatibus ea.
+						</p>
+						<a href="https://en.wikipedia.org/wiki/Shark" target="_blank">BUTTON</a>
+					</div>
+				</div>
 
-      <div class="swiper-slide swiper-slide--five">
+				<div class="swiper-slide swiper-slide--five">
 
-        <div>
-          <h2>IMAGE 5</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi soluta consequuntur repudiandae, veniam quidem. Ipsum atque aliquam, voluptates, itaque porro distinctio doloribus, iure vitae quos odio cupiditate vero illo.
-          </p>
-          <a href="https://en.wikipedia.org/wiki/Dolphin" target="_blank">BUTTON</a>
-        </div>
-      </div>
-    </div>
-    <!-- Add Pagination -->
-    <div class="swiper-pagination"></div>
-  </div>
-  <img src="https://cdn.pixabay.com/photo/2021/11/04/19/39/jellyfish-6769173_960_720.png" alt="" class="bg">
-  <img src="https://cdn.pixabay.com/photo/2012/04/13/13/57/scallop-32506_960_720.png" alt="" class="bg2">
-</main>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js'></script><script  src="./script.js"></script>
+					<div>
+						<h2>IMAGE 5</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur, adipisicing elit. At eligendi soluta consequuntur
+							repudiandae,
+							veniam quidem. Ipsum atque aliquam, voluptates, itaque porro distinctio doloribus, iure
+							vitae quos odio
+							cupiditate vero illo.
+						</p>
+						<a href="https://en.wikipedia.org/wiki/Dolphin" target="_blank">BUTTON</a>
+					</div>
+				</div>
+			</div>
+			<!-- Add Pagination -->
+			<div class="swiper-pagination"></div>
+		</div>
+		<img src="https://cdn.pixabay.com/photo/2021/11/04/19/39/jellyfish-6769173_960_720.png" alt="" class="bg">
+		<img src="https://cdn.pixabay.com/photo/2012/04/13/13/57/scallop-32506_960_720.png" alt="" class="bg2">
+		
+	</main>
+	<footer>
+		<footer class="text-gray-600 body-font">
+			<div class="container px-5 py-24 mx-auto">
+				<div class="flex flex-wrap md:text-left text-center order-first">
+					<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+						<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES
+						</h2>
+						<nav class="list-none mb-10">
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">First Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Second Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Third Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+							</li>
+						</nav>
+					</div>
+					<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+						<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES
+						</h2>
+						<nav class="list-none mb-10">
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">First Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Second Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Third Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+							</li>
+						</nav>
+					</div>
+					<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+						<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">CATEGORIES
+						</h2>
+						<nav class="list-none mb-10">
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">First Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Second Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Third Link</a>
+							</li>
+							<li>
+								<a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+							</li>
+						</nav>
+					</div>
+					<div class="lg:w-1/4 md:w-1/2 w-full px-4">
+						<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">SUBSCRIBE</h2>
+						<div
+							class="flex xl:flex-nowrap md:flex-nowrap lg:flex-wrap flex-wrap justify-center items-end md:justify-start">
+							<div class="relative w-40 sm:w-auto xl:mr-4 lg:mr-0 sm:mr-4 mr-2">
+								<label for="footer-field"
+									class="leading-7 text-sm text-gray-600">Placeholder</label>
+								<input type="text" id="footer-field" name="footer-field"
+									class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:bg-transparent focus:ring-2 focus:ring-indigo-200 focus:border-indigo-500 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+							</div>
+							<button
+								class="lg:mt-2 xl:mt-0 flex-shrink-0 inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded">Button</button>
+						</div>
+						<p class="text-gray-500 text-sm mt-2 md:text-left text-center">Bitters chicharrones fanny
+							pack
+							<br class="lg:block hidden">waistcoat green juice
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="bg-gray-100">
+				<div class="container px-5 py-6 mx-auto flex items-center sm:flex-row flex-col">
+					<a
+						class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+						<svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+							stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+							<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+						</svg>
+						<span class="ml-3 text-xl">Tailblocks</span>
+					</a>
+					<p class="text-sm text-gray-500 sm:ml-6 sm:mt-0 mt-4">© 2020 Tailblocks —
+						<a href="https://twitter.com/knyttneve" rel="noopener noreferrer" class="text-gray-600 ml-1"
+							target="_blank">@knyttneve</a>
+					</p>
+					<span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+						<a class="text-gray-500">
+							<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+								class="w-5 h-5" viewBox="0 0 24 24">
+								<path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+							</svg>
+						</a>
+						<a class="ml-3 text-gray-500">
+							<svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+								class="w-5 h-5" viewBox="0 0 24 24">
+								<path
+									d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+								</path>
+							</svg>
+						</a>
+						<a class="ml-3 text-gray-500">
+							<svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+								stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+								<rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+								<path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+							</svg>
+						</a>
+						<a class="ml-3 text-gray-500">
+							<svg fill="currentColor" stroke="currentColor" stroke-linecap="round"
+								stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+								<path stroke="none"
+									d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z">
+								</path>
+								<circle cx="4" cy="4" r="2" stroke="none"></circle>
+							</svg>
+						</a>
+					</span>
+				</div>
+			</div>
+		</footer>
+	</footer>
+	<!-- partial -->
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js'></script>
+	<script src="./script.js"></script>
 
 </body>
+
 </html>
